# SimpleShell

./: CMakeLists.txt  README  main.c
include/: builtin.h  executeline.h  helpers.h  launchline.h  readline.h  splitline.h
src/: builtin.c  executeline.c  helpers.c  launchline.c  readline.c  splitline.c
